fix: remove overflow hidden to restore scroll funtionality

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body {
     flex-flow: column nowrap;
     font-family: "Roboto", sans-serif;
     height: 100svh;
-    overflow: hidden;
 }
 
 /* Header Section */
